# EQE

./: .gitignore  README.md  config.yml  pyproject.toml
.claude/: settings.json
core/: config.py  data_loader.py  explainers.py  main.py  metrics.py  model.py  test_framework.py  visualize.py  visualize_feature_reduction.py
core/graph_utilities/: __init__.py  benchmark_summary.py  feature_reduction.py
core/utility/: config.py  log.py  progress.py
docs/: HYBRID_STRATEGY.md  METRICS_AND_RESEARCH_GAP.md  PLAN.md  SOTA_ANALYSIS.md  overview.md  papers_review.md  relazione.md
docs/presentation/: main.aux  main.fdb_latexmk  main.fls  main.nav  main.out  main.tex  main.toc  main_notes.tex  presentation_speech.md
docs/report/TeX/: biblio.bib  main.aux  main.bbl  main.blg  main.fdb_latexmk  main.fls  main.out  main.tex
results/: latest.md  results_20260623_225443.md
results/SOTA/: latest.md  results_20260518_141724.md
results/archive/: results_20260518_125534.md  results_20260518_125802.md  results_20260518_141724.md  results_20260623_225443.md  results_20260624_233124.md  results_20260625_202940.md  results_20260627_150330.md  results_20260627_212539.md  results_20260629_105230.md
