[project]
name = "eqe"
version = "0.1.0"
description = "P4 — Evaluating the Quality of Explanations (Explainable and Trustworthy AI)"
readme = "README.md"
requires-python = ">=3.11"

dependencies = [
    # Core ML & data
    "numpy>=1.26",
    "pandas>=2.2",
    "scikit-learn>=1.5",
    "xgboost>=2.1",

    # XAI explainers
    "shap>=0.46",
    "lime>=0.2.0.1",

    # Utilities
    "tqdm>=4.66",
    "matplotlib>=3.9",
    "seaborn>=0.13",
    "ucimlrepo>=0.0.7",          # fetch UCI datasets programmatically
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-cov>=5.0",
    "ruff>=0.4",                 # linter + formatter
    "ipykernel>=6.29",
    "jupyter>=1.0",
]

[project.scripts]
eqe = "core.main:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["core"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP"]

[tool.pytest.ini_options]
testpaths = ["tests"]
